--- a/assets/style.css
+++ b/assets/style.css
@@ -51,7 +51,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #f2f2f2;}
+  background-color: #d1eced;} 
 
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important; }
